*2.2.0* February 27, 2008

* Fix git submodule support to init on sync [halorgium]

* Add alternative server-centric role definition method [James Duncan Davidson]

* Add support for password prompts from the Mercurial SCM [ches]

* Add support for :max_hosts option in task definition or run() [Rob Holland <rob@inversepath.com>]

* Distributed git support for better operability with remote_cache strategy [voidlock]

* Use a default line length in help text if line length is otherwise too small [Jamis Buck]

* Fix incorrect reference to the 'setup' task in task documentation [rajeshduggal]

* Don't try to kill the spawner process on deploy:stop if no spawner process exists [Jamis Buck]

* Dynamic roles (e.g. role(:app) { "host.name" }) [dmasover]

* Implement Bzr#next_revision so that pending changes can be reported correctly [casret]

* Use a proper export command for bzr SCM [drudru]

* Use checkout instead of merge for git SCM [nuttycom]

* Fix typo in Subversion SCM module, encountered when an update fails [kemiller]

* Fix documentation typo in upload.rb [evolving_jerk]

* Added test case to show that the :scm_command is honored by the git SCM module [grempe]

* Fail gracefully when double-colons are used to delimit namespaces [richie]

* Add support for :git_enable_submodules variable, to enable submodules with the git SCM [halorgium]

* If subversion asks for a password, prompt as a last resort [Jamis Buck]

* Use checkout --lightweight for bzr checkout, instead of branch [michiels]

* Make sure bzr SCM works when revision is head (or unspecified) [michiels]

* Support p4sync_flags and p4client_root variables for Perforce [gseidman]

* Prepare for Net::SSH v2 by making sure Capistrano only tries to load Net::SSH versions less than 1.99.0 [Jamis Buck]


*2.1.0* October 14, 2007

* Default to 0664 instead of 0660 on upload [Jamis Buck]
