@@ -1,3 +1,8 @@
+*SVN*
+
+* Improved "copy" strategy supports local caching and pattern exclusion (via :copy_cache and :copy_exclude variables) [Jamis Buck]
+
+
 *2.2.0* February 27, 2008
 
 * Fix git submodule support to init on sync [halorgium]
